--- a/_posts/2020-10-23-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-23-mon-article/mon-article.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Article 1"
+title: "Article 1 : Breast cancer: One-dose radiotherapy 'as effective as full course'"
 description: |
-  Breast cancer: One-dose radiotherapy 'as effective as full course'
+ 
 author:
   - name: Pinchon Audrey 
     url: {}
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(echo = FALSE)
 - Word count : 632
 
 # __Vocabulary__
-| Word from the text | Synonym/definition in English |French translation |
+| Word from the text | Synonym/definition in English | French translation |
 | --- | --- | --- |
 | Target | To use, set up, or designate as a target or goal | Cibler |
 | Likely | Probably  | Probablement |
