--- a/_posts/2020-10-23-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-23-mon-article/mon-article.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Article 1 : Breast cancer: One-dose radiotherapy 'as effective as full course'"
-description: |
+description: 
  
 author:
   - name: Pinchon Audrey 
@@ -10,13 +10,15 @@ output:
   distill::distill_article:
     self_contained: false
 ---
+```{r [link] (https://www.bbc.com/news/health-53834130) }
+```
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
 # __Description__
-- Source of the article : https://www.bbc.com/news/health-53834130
+- Source of the article : link
 - Publication date : August 19th 2020
 - Word count : 632
 
