--- a/_posts/2020-10-23-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-23-mon-article/mon-article.Rmd
@@ -10,15 +10,14 @@ output:
   distill::distill_article:
     self_contained: false
 ---
-```{r [link] (https://www.bbc.com/news/health-53834130) }
-```
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+
 # __Description__
-- Source of the article : link
+- Source of the article : https://www.bbc.com/news/health-53834130
 - Publication date : August 19th 2020
 - Word count : 632
 
