--- a/_posts/meal/meal.Rmd
+++ b/_posts/meal/meal.Rmd
@@ -19,5 +19,7 @@ Here is a short description of my activities during the year for the English cou
 
 - Nov. 1st: This weekend, I work on my English Grammar exercises. I did exercises of present perfect simple and past perfect simple. I want to improve my English. I also did research for my topic. I analyzed and published an article this Sunday.
 
+- Nov. 7th : I learned and studied new vocabulary words. I analyzed and published a new article on breast cancer.
+
 
 
