création article sur oursins

--- a/_posts/2020-11-10-graphicdescription/graphicdescription.Rmd
+++ b/_posts/2020-11-10-graphicdescription/graphicdescription.Rmd
@@ -15,19 +15,18 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-```
 
-```{r setup}
-SciViews:: R
+SciViews::R
 ```
-
 
 ```{r imprtation}
-data <- read("zooplankton", package = "data.io")
+data <- read("urchin_bio", package = "data.io")
 ```
 
+# **Introduction**
 
-Distill is a publication format for scientific and technical writing, native to the web.
+# **Graph and Analysis**
 
-Learn more about using Distill at <https://rstudio.github.io/distill>.
+
+
 
