atlicle 4 + modifications autres articles

--- a/_posts/2020-11-01-article-2/article-2.Rmd
+++ b/_posts/2020-11-01-article-2/article-2.Rmd
@@ -59,7 +59,7 @@ knitr::opts_chunk$set(echo = FALSE)
 |  
 | --- | --- |
 |  |  |
-In Science Daily newspaper, on 17 August 2020
+In Science Daily newspaper, August 17th 2020
 
 # *__General topic__* 
 |  
