--- a/_posts/meal/meal.Rmd
+++ b/_posts/meal/meal.Rmd
@@ -21,5 +21,9 @@ Here is a short description of my activities during the year for the English cou
 
 - Nov. 7th : I learned and studied new vocabulary words. I analyzed and published a new article on breast cancer.
 
+- Nov. 20th : Today, I learned new vocabulary words while studying Unit 3. I praticed my vocabulary on quizlet. I did my comparative and superlative exercises. I also started watching a series in English "Get Even".
+
+- Nov. 21st : Today, I analyzed and published my 4th article on breast cancer on my blog. This article talks about the effect of bee venom on breast cancer cells.
+
 
 
