ajout catégorie et modifications

--- a/_posts/2020-10-23-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-23-mon-article/mon-article.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Article 1 : Breast cancer: One-dose radiotherapy 'as effective as full course'"
+categories: 
+  - English for Science
 description: 
  
 author:
@@ -15,9 +17,10 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+![](https://ichef.bbci.co.uk/news/800/cpsprodpb/B7A5/production/_114031074_gettyimages-501972854.jpg)
 
 # __Description__
-- Source of the article : ::
+- Source of the article : https://www.bbc.com/news/health-53834130
 - Publication date : August 19th 2020
 - Word count : 632
 
@@ -45,14 +48,23 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # __Analysis about the study__
 
-| Questions | Answers |
-| --- | --- |
-| *__Researchers?__* | The lead author of this study is Professor Jayant Vaidya. Targeted Intraoperative Radiotherapy was developed by doctors from at University College London. Joanne Haviland, at the cancer research institute. Martin Ledwick, at Cancer Research UK. |
-| *__Published in? When ?__* | The study is published in the August 19 2020, in the BBC News newspaper. |
-| *__General topic__* | Doctors have developed a type of radiation therapy for breast cancer. According to the study, a single dose of this radiotherapy would be as effective as a complete or standard treatment. The test was performed on women. Only a small number of clinics can perform this treatment on patients because they have the necessary materials. People who receive the shortest treatment would have fewer side-effects and less to die of other cancer or diseases within 5 years after this treatment |
-| *__Procedure/What was examined__* | Doctors at University College London have developed intraoperative targeted radiotherapy (TARGIT_IORT). This is a single, targeted dose of radiation that is injected into the patient in the area where the cancer is located. These patients can receive this treatment during surgery to remove the tumour. TARGIT-A has been tested during surgery on 2,298 women with breast cancer. These women came from 10 different countries. |
-| *__Conclusions/ Discovery__* | A single dose of radiation injected during the operation would be as effective as a prolonged treatment. Women shouldn’t return for further treatment. 80% of women have fewer side effects by following shorter treatments. 20% of the women who have followed this treatment did go on to have further radiotherapy treatments. |
-| *__Remaining questions__* | The researchers are worried because doctors weren’t able to analyse the patient’s tumour before this test to see if any of them would require longer radiation therapy before surgery. How would this change the effect of the TARGIT treatment? Would it have been more effective? |
+# *__Researchers?__* 
+The lead author of this study is Professor Jayant Vaidya. Targeted Intraoperative Radiotherapy was developed by doctors from at University College London. Joanne Haviland, at the cancer research institute. Martin Ledwick, at Cancer Research UK.
+
+# *__Published in? When ?__* 
+The study was published on 19 August 2020, in the BBC News newspaper.
+
+# *__General topic__* 
+Doctors have developed a type of radiation therapy for breast cancer. According to the study, a single dose of this radiotherapy would be as effective as a complete or standard treatment. The test was performed on women. Only a small number of clinics can perform this treatment on patients because they have the necessary materials. People who receive the shortest treatment would have fewer side-effects and less to die of other cancer or diseases within 5 years after this treatment.
+
+# *__Procedure/What was examined__* 
+Doctors at University College London have developed intraoperative targeted radiotherapy (TARGIT_IORT). This is a single, targeted dose of radiation that is injected into the patient in the area where the cancer is located. These patients can receive this treatment during surgery to remove the tumour. TARGIT-A has been tested during surgery on 2,298 women with breast cancer. These women came from 10 different countries. 
+
+# *__Conclusions/ Discovery__* 
+A single dose of radiation injected during the operation would be as effective as a prolonged treatment. Women shouldn’t return for further treatment. 80% of women have fewer side effects by following shorter treatments. 20% of the women who have followed this treatment did go on to have further radiotherapy treatments.
+
+# *__Remaining questions__* 
+The researchers are worried because doctors weren’t able to analyse the patient’s tumour before this test to see if any of them would require longer radiation therapy before surgery. 
 
 
 
