--- a/_posts/2020-11-01-article-2/article-2.Rmd
+++ b/_posts/2020-11-01-article-2/article-2.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Article 2 : Immunotherapy extends survival in mouse model of hard-to-treat breast cancer"
+categories: 
+  - English for Science
 description: 
   
 author:
