--- a/_posts/2020-11-07-mon-article-3/mon-article-3.Rmd
+++ b/_posts/2020-11-07-mon-article-3/mon-article-3.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Article 3 : Study finds global trends in women's breast cancer show cause for concern"
+categories: 
+  - English for Science
 description: 
   
 author:
