--- a/_posts/2020-11-21-article-4/article-4.Rmd
+++ b/_posts/2020-11-21-article-4/article-4.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "Article 4  : Venom from honeybees found to kill aggressive breast cancer cells"
+categories: 
+  - English for Science
 description: 
   
 author:
