--- a/_posts/meal/meal.Rmd
+++ b/_posts/meal/meal.Rmd
@@ -25,5 +25,9 @@ Here is a short description of my activities during the year for the English cou
 
 - Nov. 21st : Today, I analyzed and published my 4th article on breast cancer on my blog. This article talks about the effect of bee venom on breast cancer cells.
 
+- Dec. 2nd  : I started a new series : "Superstition". This series tells the story of a family funeral business that is linked to the supernatural world. This business deals with the dead but also with people who have died in an unexplained way.
 
+- Dec. 8th : I finished "Superstition" because it's a short series, one season only.  
+
+- Dec. 9th : This morning, I worked on my English grammar, mainly theory and irregular verbs. Then I started "Biohackers" with English subtitles because I would like to improve my listening comprehension, ... 
 
