--- a/_posts/2020-10-23-mon-article/mon-article.Rmd
+++ b/_posts/2020-10-23-mon-article/mon-article.Rmd
@@ -2,11 +2,13 @@
 title: "Article 1 : Breast cancer: One-dose radiotherapy 'as effective as full course'"
 categories: 
   - English for Science
-description: 
+  - Breast cancer 
+description: A new radiotherapy for breast cancer has been developed and tested on women.
  
 author:
   - name: Pinchon Audrey 
     url: {}
+preview : https://ichef.bbci.co.uk/news/800/cpsprodpb/B7A5/production/_114031074_gettyimages-501972854.jpg
 date: 10-23-2020
 output:
   distill::distill_article:
