--- a/_posts/2020-11-21-article-4/article-4.Rmd
+++ b/_posts/2020-11-21-article-4/article-4.Rmd
@@ -9,7 +9,7 @@ author:
   - name: Pinchon Audrey
     url: {}
 date: 11-21-2020
-preview : https://ichef.bbci.co.uk/news/800/cpsprodpb/D962/production/_114205655_gettyimages-1210871686.jpg
+preview : https://upload.wikimedia.org/wikipedia/commons/4/4a/Todd_Huffman_-_Lattice_%28by%29.jpg
 output:
   distill::distill_article:
     self_contained: false
@@ -19,10 +19,16 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-![](https://ichef.bbci.co.uk/news/800/cpsprodpb/D962/production/_114205655_gettyimages-1210871686.jpg)
+![](https://upload.wikimedia.org/wikipedia/commons/4/4a/Todd_Huffman_-_Lattice_%28by%29.jpg)
+Worker honeybees. Their venom could treat breast cancer. By Todd Huffman.
+
+License : Todd Huffman, CC BY 2.0, via Wikipedia.
+
+[Link to the image](https://en.wikipedia.org/wiki/Worker_bee#/media/File:Todd_Huffman_-_Lattice_(by).jpg)
+
 
 # __Description__
-- Source of the article : https://www.sciencedaily.com/releases/2020/09/200901093412.htm
+- Source of the article : [link](https://www.sciencedaily.com/releases/2020/09/200901093412.htm)
 - Publication date : September 2nd 2020
 - Word count : 756
 
@@ -48,16 +54,28 @@ knitr::opts_chunk$set(echo = FALSE)
 # __Analysis about the study__
 
 # *__Researchers?__*
+|  
+| --- | --- |
+|  |  |
 -	Dr Ciara Duffy from the Harry Perkins Institute of Medical Research and The University of Western Australia
 -	Western Australia's Chief Scientist Professor Peter Klinken
 
 # *__Published in? When ?__*
+|  
+| --- | --- |
+|  |  |
 In Science Daily newspaper, September 2nd 2020
 
 # *__General topic__* 
+|  
+| --- | --- |
+|  |  |
 A study shows that honeybees venom kills aggressive breast cancer cells. Researchers produced synthetically a major component of the venom, melittin, and observed the effects.
 
 # *__Procedure/What was examined__*
+|  
+| --- | --- |
+|  |  |
 -	Sampling of 312 honeybees and bumblebees from different places.
 -	Put the bees to sleep with carbon dioxide and keep them on ice.
 -	Extraction of honeybees’ venom.
@@ -66,12 +84,18 @@ A study shows that honeybees venom kills aggressive breast cancer cells. Researc
 -	Comparison of the effects of different bees and bumblebees.
 
 # *__Conclusions/ Discovery__*
+|  
+| --- | --- |
+|  |  |
 Bee venom destroys (100%) triple negative breast cancer cells and HER2-enriched breast cancer cells, while having minimal effects on normal cells.
 Melittin can suppress the growth of deadly breast cancer cells, particularly triple negative breast cancer.
 Comparing bees from different places, the effects of the venom are almost identical on breast cancer cells. Bumblebees are unable to induce the death of cancer cells.
 
 
 # *__Remaining questions__*
+|  
+| --- | --- |
+|  |  |
 /
 
 
