--- a/_posts/2021-01-27-article-5/article-5.Rmd
+++ b/_posts/2021-01-27-article-5/article-5.Rmd
@@ -1,5 +1,8 @@
 ---
 title: "Article 5  : Scientists find a switch to flip and turn off breast cancer growth and metastasis"
+categories: 
+  - English for Science
+  - Breast cancer 
 description: This article talks about the discovery of two genes that are responsible for breast cancer. Researchers studied these two genes. 
   
 author:
