--- a/_posts/2021-02-17-article-6/article-6.Rmd
+++ b/_posts/2021-02-17-article-6/article-6.Rmd
@@ -3,7 +3,7 @@ title: "Article 6 : How breast cancer cells hide from immune attack"
 categories: 
   - English for Science
   - Breast cancer 
-description: Researchers have found a way to improve immunotherapy
+description: Researchers have found a way to improve immunotherapy.
 author:
   - name: Pinchon Audrey
     url: {}
