ajout images + ccl

--- a/_posts/2021-02-17-article-6/article-6.Rmd
+++ b/_posts/2021-02-17-article-6/article-6.Rmd
@@ -7,6 +7,7 @@ description: Researchers have found a way to improve immunotherapy.
 author:
   - name: Pinchon Audrey
     url: {}
+preview : https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Breast_Cancer.png/220px-Breast_Cancer.png
 date: 02-17-2021
 output:
   distill::distill_article:
@@ -16,6 +17,13 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+
+![](https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Breast_Cancer.png/220px-Breast_Cancer.png)
+
+License : BruceBlaus, CC BY-SA 4.0, via Wikipedia. 
+
+[Link to the image](https://en.wikipedia.org/wiki/Breast_cancer)
 
 # __Description__
 - Source of the article : [link](https://www.sciencedaily.com/releases/2021/01/210127140132.htm)
