--- a/_posts/2021-01-27-article-5/article-5.Rmd
+++ b/_posts/2021-01-27-article-5/article-5.Rmd
@@ -8,6 +8,7 @@ description: This article talks about the discovery of two genes that are respon
 author:
   - name: Pinchon Audrey
     url: {}
+preview : https://www.nationalbreastcancer.org/wp-content/uploads/metastatic-breast-cancer.jpg
 date: 01-27-2021
 output:
   distill::distill_article:
@@ -17,6 +18,12 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+![](https://www.nationalbreastcancer.org/wp-content/uploads/metastatic-breast-cancer.jpg)
+
+Image of a metastatic breast cancer. 
+
+[Link to the image](https://https://www.nationalbreastcancer.org/metastatic-breast-cancer)
 
 # __Description__
 - Source of the article : [link](https://www.sciencedaily.com/releases/2020/06/200602130507.htm)
