--- a/_posts/2021-04-03-introduction/introduction.Rmd
+++ b/_posts/2021-04-03-introduction/introduction.Rmd
@@ -24,7 +24,7 @@ The breast cancer affects women.  It can also affect a few men but, in these art
 
 Different researchers of different laboratories are working on one or more ways to stop the spread of breast cancer tumors or to treat it. Studies show that there are inequalities in cancer mortality around the world. Premenopausal and postmenopausal breast cancer is increasing significantly in the world.
 
-Other research’s show for example that several doses of radiotherapy are not always efficient to treat the cancer.  An intraoperative targeted radiotherapy is a single and targeted dose that can be given at the same time as the operation to remove the tumor. This is shown to be as effective as long-term treatment. Researches have also looked for a new type of immunotherapy to treat de breast cancer.
+Other research’s show for example that several doses of radiotherapy are not always efficient to treat the cancer.  An intraoperative targeted radiotherapy is a single and targeted dose that can be given at the same time as the operation to remove the tumor. This is shown to be as effective as long-term treatment. Researches have also looked for a new type of immunotherapy to treat the breast cancer.
 
 There are different ways to make tests. Tests are made on laboratory animals such as mice. From other tests, they take cells from patients in other to make a culture of cells and to do tests on them. 
 
